<androidx.swiperefreshlayout.widget.SwipeRefreshLayout android:id="@+id/refreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.weatheradventure.ui.WeatherFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/mainDegreesTv"
                        style="@style/TextAppearance.TitleDegrees"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="11" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/stateOfWeatherIv"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="end|center_vertical"
                        android:foregroundGravity="center" />
                </FrameLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/placeTv"
                    style="@style/TextAppearance.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="16dp"
                    tools:text="Voikovsky" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/rangeDegreesTv"
                    style="@style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="4dp"
                    tools:text="11/-2" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/feelsLikeTv"
                    style="@style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="4dp"
                    tools:text="11" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/dateTv"
                    style="@style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="40dp"
                    tools:text="Sun, 03:52" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/weeklyWeatherLayout"
                    style="@style/CardView.Base"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginVertical="4dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/weeklyWeatherRv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/sunBehaviourLayout"
                    style="@style/CardView.Base"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginVertical="4dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="12dp">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/sunriseTv"
                                style="@style/TextAppearance.Medium"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginBottom="8dp"
                                android:text="@string/sunrise" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/sunriseDateTv"
                                style="@style/TextAppearance.Medium"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginBottom="16dp" />

                            <com.google.android.material.imageview.ShapeableImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_sunrise" />
                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/sunsetTv"
                                style="@style/TextAppearance.Medium"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginBottom="8dp"
                                android:text="@string/sunset" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/sunsetDateTv"
                                style="@style/TextAppearance.Medium"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginBottom="16dp" />

                            <com.google.android.material.imageview.ShapeableImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_sunset" />
                        </androidx.appcompat.widget.LinearLayoutCompat>
                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/additionalInfo"
                    style="@style/CardView.Base"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginVertical="4dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <com.google.android.material.imageview.ShapeableImageView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_sun" />

                            <com.google.android.material.textview.MaterialTextView
                                style="@style/TextAppearance.Medium"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginTop="8dp"
                                android:text="@string/uv_index" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/UVIndexTv"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginTop="4dp" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/md_theme_dark_onSurfaceVariant" />

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <com.google.android.material.imageview.ShapeableImageView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_baseline_water_drop_36" />

                            <com.google.android.material.textview.MaterialTextView
                                style="@style/TextAppearance.Medium"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginTop="8dp"
                                android:text="@string/humidity" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/humidityTv"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginTop="4dp" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/md_theme_dark_onSurfaceVariant" />

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <com.google.android.material.imageview.ShapeableImageView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_air_36" />

                            <com.google.android.material.textview.MaterialTextView
                                style="@style/TextAppearance.Medium"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginTop="8dp"
                                android:text="@string/wind" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/windSpeedTv"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginTop="4dp" />

                        </androidx.appcompat.widget.LinearLayoutCompat>
                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.cardview.widget.CardView>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

